--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,10 @@
 
 .auto-listing .thumbnail img {
     width: 100%;
-    height: 100%;
+}
+
+.auto-listing .thumbnail .photo {
+    height: 180px;
 }
 
 .auto-listing .thumbnail {
