--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,50 @@
-.vehicles-listing .title {
+.vehicles-find .title {
     margin-top: 0;
 }
 
-.vehicles-listing .thumbnail {
+.vehicles-find .thumbnail {
     margin-bottom: 20px;
     font-size: 13px;
     position: relative;
     padding: 0;
 }
 
-.vehicles-listing .thumbnail img {
+.vehicles-find .thumbnail img {
     width: 100%;
     height: 100%;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
 }
 
-.vehicles-listing .thumbnail .photo {
+.vehicles-find .thumbnail .photo {
 
 }
 
-.vehicles-listing .thumbnail .info {
+.vehicles-find .thumbnail .info {
     background-color: #f5f5f5;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     border-top: 1px solid #ddd;
 }
 
-.vehicles-listing .thumbnail .info .first h4{
+.vehicles-find .thumbnail .info .first h4{
     margin-left: 10px;
     color: #34495e;
 }
 
-.vehicles-listing .thumbnail .info .second {
+.vehicles-find .thumbnail .info .second {
     font-size: 12px;
     padding-left: 10px;
     color: #27ae60;
 }
 
-.vehicles-listing .thumbnail .info .third {
+.vehicles-find .thumbnail .info .third {
     font-size: 12px;
     padding-left: 10px;
     color: #34495e;
 }
 
-.vehicles-listing .thumbnail .edit {
+.vehicles-find .thumbnail .edit {
     background-color: #c0392b;
     border-top-right-radius: 3px;
     color: #fff;
