--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,3 @@
-.vehicles-find .title {
-    margin-top: 0;
-}
-
 .vehicles-find .thumbnail {
-    margin-bottom: 20px;
-    font-size: 13px;
-    position: relative;
-    padding: 0;
-}
-
-.vehicles-find .thumbnail img {
-    width: 100%;
-    height: 100%;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-}
-
-.vehicles-find .thumbnail .image {
-
-}
-
-.vehicles-find .thumbnail .info {
-    background-color: #f5f5f5;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    border-top: 1px solid #ddd;
-}
-
-.vehicles-find .thumbnail .info .first h4{
-    margin-left: 10px;
-    color: #34495e;
-}
-
-.vehicles-find .thumbnail .info .second {
-    font-size: 12px;
-    padding-left: 10px;
-    color: #27ae60;
-}
-
-.vehicles-find .thumbnail .info .third {
-    font-size: 12px;
-    padding-left: 10px;
-    color: #34495e;
-}
-
-.vehicles-find .thumbnail .edit {
-    background-color: #c0392b;
-    border-top-right-radius: 3px;
-    color: #fff;
-    font-size: 14px;
-    padding: 2px 6px;
-    position: absolute;
-    right: 0;
-    top: 0;
+    text-decoration: none;
 }
